--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,27 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+/*for body margin and styleing*/
+body {
+	width: 880px;
+	margin: 0px 80px;
+}
+
+/*nav*/
+nav {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+nav a {
+	text-decoration: none;
+}
+
+
+.ul-fix {
+	list-style-type: square;
+	margin: 0px 20px;
+}
