--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -71,9 +71,10 @@ body {
 	margin: 0px 80px;
 }
 
-/*nav*/
+/*global nav*/
 nav {
 	width: 100%;
+	margin: 20px 0px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -81,8 +82,57 @@ nav {
 
 nav a {
 	text-decoration: none;
+	color: lightgrey;
 }
 
+nav a:hover {
+	color: black;
+}
+
+/*services page*/
+
+/*services section*/
+.services {
+	margin: 30px 0px;
+}
+
+.services h1 {
+	font-size: 30px;
+}
+
+/*Content section*/
+.services-container {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	justify-content: space-between;
+	align-items: stretch;
+}
+
+.services-item {
+	border: 1px solid black;
+	padding: 20px;
+	width: 48%;
+    margin: 20px 0px;
+	background-color: ghostwhite;
+}
+
+.services-item button {
+	margin-top: 20px;
+	padding: 8px 20px;
+	border-radius: 5px;
+	border: 1px solid black;
+	background-color: white;
+}
+
+.services-item button:hover {
+	margin-top: 20px;
+	padding: 8px 20px;
+	border-radius: 5px;
+	border: 1px solid black;
+	background-color: black;
+	color: white;
+}
 
 .ul-fix {
 	list-style-type: square;
